# UR16e_with_LLM_alexa_perception_MoveIt

./: .gitattributes  .gitignore  README.md  ur16e_tested_moveit.usd  ur16e_with_action_graph.usd
Work_for_paper/: rl_steps  run_robot  run_robot_software  urdf_modified_inst
isaaclab_ur_reach_sim2real/: .gitignore  README.md
isaaclab_ur_reach_sim2real/python/: run_task.py
isaaclab_ur_reach_sim2real/python/robots/: ur.py
isaaclab_ur_reach_sim2real/python/utils/: config_loader.py
isaaclab_ur_reach_sim2real/sample/ur_reach/: env.yaml  policy.pt  ur_reach_env.yaml  ur_reach_policy.pt
logs/skrl/SO100_lift/2025-07-15_12-26-07_ppo_torch_SO100_lift/params/: agent.pkl  agent.yaml  env.pkl  env.yaml
logs/skrl/SO100_lift/2025-07-15_12-33-38_ppo_torch_SO100_lift/params/: agent.pkl  agent.yaml  env.pkl  env.yaml
outputs/2025-07-15/12-26-07/.hydra/: config.yaml  hydra.yaml
outputs/2025-07-15/12-33-38/.hydra/: config.yaml  hydra.yaml
source/isaaclab/isaaclab.egg-info/: PKG-INFO
source/isaaclab_rl/isaaclab_rl.egg-info/: PKG-INFO  requires.txt
source/isaaclab_tasks/isaaclab_tasks/direct/humanoid_amp/motions/: humanoid_dance.npz  humanoid_run.npz  humanoid_walk.npz
source/isaaclab_tasks/isaaclab_tasks/manager_based/manipulation/reach/config/ur16e/: __init__.py  joint_pos_env_cfg.py
src/alexa_vs/: CMakeLists.txt  package.xml
src/alexa_vs/alexa_vs/: stt.py
src/ur_central_client/: CMakeLists.txt  package.xml
src/ur_central_client/ur_central_client/: central_client_final.py  central_client_wo_llm.py  llm_client.py  llm_image_client.py  rl_ppo_policy_deployment.py
src/ur_moveit_cpp_ext/: CMakeLists.txt  package.xml
src/ur_moveit_cpp_ext/src/: moveit_xyz.cpp
src/ur_mp_server/: CMakeLists.txt  package.xml
src/ur_mp_server/src/: pick_action_server.cpp
src/ur_object_detection/: CMakeLists.txt  package.xml
src/ur_object_detection/ur_object_detection/: grounding_dino_test.py  object_detection.py  working_code.py
src/ur_object_detection/ur_object_detection/groundingdino/: sample.py  working_code.py
src/ur_package_msgs/: CMakeLists.txt  package.xml
src/ur_package_msgs/action/: PickAction.action
src/ur_package_msgs/msg/: ObjectPosition.msg  ObjectPositions.msg
src/ur_package_msgs/srv/: GetObjectLocations.srv  GetSpeech.srv
