<?xml version="1.0"?>
<package format="3">
  <name>alexa_vs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shakthibala2004@gmail.com">alien</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ur_package_msgs</build_depend>
  <exec_depend>ur_package_msgs</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-flask</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
